--- a/pom.xml
+++ b/pom.xml
@@ -50,12 +50,12 @@
 		   <version>2.1.3.RELEASE</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/javax/javaee-api -->
-		<dependency>
+		<!--<dependency>
 		    <groupId>javax</groupId>
 		    <artifactId>javaee-api</artifactId>
 		    <version>8.0.1</version>
 		    <scope>provided</scope>
-		</dependency>
+		</dependency>-->
 		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 		<dependency>
 		    <groupId>org.hibernate</groupId>
